--- a/src/main/resources/templates/components/cpu-coolers.html
+++ b/src/main/resources/templates/components/cpu-coolers.html
@@ -5,15 +5,28 @@
     <title>CPU Coolers</title>
 </head>
 <body>
+<form th:action="@{/components/cpu-coolers/sort}" method="get">
+  <label for="sortBy">Sort By</label>
+  <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
+    <option>Name</option>
+    <option>Price</option>
+  </select>
+  <select th:value="${order}" name="order" id="order" size="1">
+    <option>Ascending</option>
+    <option>Descending</option>
+  </select>
+  <button type="submit">Sort</button>
+</form>
 <ul>
-  <li th:each="cpu_cooler : ${cpu_coolers}">
+  <li th:each="cpu_cooler : ${cpu_coolers}" th:if="${cpu_cooler.price > 0.0}">
     <p th:text="'Name: ' + ${cpu_cooler.name}"></p>
-    <p th:text="'Price: £' + ${cpu_cooler.price}"></p>
+    <p th:text="'Price: £' + ${#numbers.formatDecimal(cpu_cooler.price, 0, 'COMMA', 2, 'POINT')}"></p>
     <p>RPM:
-      <th:block th:each="rpm : ${cpu_cooler.rpm}">
+      <th:block th:each="rpm : ${cpu_cooler.rpm}" th:if="${!cpu_cooler.rpm.isEmpty()}">
         <span th:text="${rpm.rpm}"></span>
         <span th:if="${rpm != cpu_cooler.rpm.getLast()}"> - </span>
       </th:block>
+      <span th:if="${cpu_cooler.rpm.isEmpty()}">N/A</span>
     </p>
     <p>Noise Level:
       <th:block th:each="noise_level : ${cpu_cooler.noise_level}">
