--- a/src/main/resources/templates/components/cpus.html
+++ b/src/main/resources/templates/components/cpus.html
@@ -19,15 +19,19 @@
   <button type="submit">Sort</button>
 </form>
 <ul>
-  <li th:each="cpu : ${cpus}">
+  <li th:each="cpu : ${cpus}" th:if="${cpu.price > 0.0}">
     <p th:text="'Name: ' + ${cpu.name}"></p>
-    <p th:text="'Price: £' + ${cpu.price}"></p>
+    <p th:text="'Price: £' + ${#numbers.formatDecimal(cpu.price, 0, 'COMMA', 2, 'POINT')}"></p>
     <p th:text="'Cores: ' + ${cpu.core_count}"></p>
     <p th:text="'Clock Speed: ' + ${cpu.coreClock} + 'GHz'"></p>
-    <p th:text="'Boosted Clock Speed: ' + ${cpu.boost_clock} + 'GHz'"></p>
+    <p>Boosted Clock Speed:
+      <span th:text="${cpu.boost_clock > 0.0} ? ${cpu.boost_clock} + 'GHz' : 'N/A'"></span>
+    </p>
     <p th:text="'Microarchitecture: ' + ${cpu.microarchitecture}"></p>
     <p th:text="'TDP: ' + ${cpu.tdp} + 'W'"></p>
-    <p th:text="'Integrated Graphics: ' + ${cpu.graphics}"></p>
+    <p>Integrated Graphics:
+      <span th:text="${cpu.graphics != null} ? ${cpu.graphics} : 'None'"></span>
+    </p>
   </li>
 </ul>
 </body>
