--- a/src/main/resources/templates/components/graphics-cards.html
+++ b/src/main/resources/templates/components/graphics-cards.html
@@ -5,16 +5,37 @@
     <title>Graphics Cards</title>
 </head>
 <body>
+<form th:action="@{/components/graphics-cards/sort}" method="get">
+  <label for="sortBy">Sort By</label>
+  <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
+    <option>Name</option>
+    <option>Price</option>
+    <option>Core Clock</option>
+  </select>
+  <select th:value="${order}" name="order" id="order" size="1">
+    <option>Ascending</option>
+    <option>Descending</option>
+  </select>
+  <button type="submit">Sort</button>
+</form>
 <ul>
-  <li th:each="graphics_card : ${graphics_cards}">
+  <li th:each="graphics_card : ${graphics_cards}" th:if="${graphics_card.price > 0.0}">
     <p th:text="'Name: ' + ${graphics_card.name}"></p>
-    <p th:text="'Price: £' + ${graphics_card.price}"></p>
+    <p th:text="'Price: £' + ${#numbers.formatDecimal(graphics_card.price, 0, 'COMMA', 2, 'POINT')}"></p>
     <p th:text="'Chipset: ' + ${graphics_card.chipset}"></p>
     <p th:text="'Memory: ' + ${graphics_card.memory} + 'GB'"></p>
-    <p th:text="'Core Clock Speed: ' + ${graphics_card.core_clock} + 'MHz'"></p>
-    <p th:text="'Boosted Clock Speed: ' + ${graphics_card.boost_clock} + 'MHz'"></p>
-    <p th:text="'Colour: ' + ${graphics_card.color}"></p>
-    <p th:text="'Length: ' + ${graphics_card.length} + 'mm'"></p>
+    <p>Core Clock Speed:
+      <span th:text="${graphics_card.coreClock > 0.0} ? ${graphics_card.coreClock} + 'MHz' : 'Unavailable'"></span>
+    </p>
+    <p>Boosted Clock Speed:
+      <span th:text="${graphics_card.boost_clock > 0.0} ? ${graphics_card.boost_clock} + 'MHz' : 'N/A'"></span>
+    </p>
+    <p>Colour:
+      <span th:text="${graphics_card.color != null} ? ${graphics_card.color} : 'N/A'"></span>
+    </p>
+    <p>Length:
+      <span th:text="${graphics_card.length > 0} ? ${graphics_card.length} + 'mm' : 'Unavailable'"></span>
+    </p>
   </li>
 </ul>
 </body>
