--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -14,6 +14,10 @@
     <form th:action="@{/load-component-data}" method="get">
         <button type="submit">Load Component Data</button>
     </form>
+    <form th:action="@{/products}" method="get">
+        <button type="submit">View Products</button>
+    </form>
+
 
     <div style="position: relative;">
         <button class="dropdown-toggle" type="button" onclick="toggleDropdown()">Components ▼</button>
