Started combining unnecessary routes

--- a/src/main/resources/templates/components/cpus.html
+++ b/src/main/resources/templates/components/cpus.html
@@ -5,7 +5,7 @@
     <title>CPUs</title>
 </head>
 <body>
-<form th:action="@{/components/cpus/sort}" method="get">
+<form th:action="@{/components/cpus}" method="get">
   <label for="sortBy">Sort By</label>
   <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
     <option>Name</option>
