--- a/src/main/resources/templates/components/memory.html
+++ b/src/main/resources/templates/components/memory.html
@@ -5,7 +5,7 @@
     <title>Memory</title>
 </head>
 <body>
-<form th:action="@{/components/memory/sort}" method="get">
+<form th:action="@{/components/memory}" method="get">
   <label for="sortBy">Sort By</label>
   <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
     <option>Name</option>
