--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -17,6 +17,10 @@
     <form th:action="@{/products}" method="get">
         <button type="submit">View Products</button>
     </form>
+    <form th:action="@{/products/create}" method="get">
+        <button type="submit">Custom PC</button>
+    </form>
+
 
 
     <div style="position: relative;">
