--- a/src/main/resources/templates/components/cpu-coolers.html
+++ b/src/main/resources/templates/components/cpu-coolers.html
@@ -39,6 +39,10 @@
     <p>Radiator Size:
       <span th:text="${cpu_cooler.size == 0} ? 'N/A' : ${cpu_cooler.size} + 'mm'"></span>
     </p>
+    <form th:action="@{/products/create}" method="get" th:object="${componentIds}" th:if="${componentIds != null}">
+      <input type="hidden" th:value="${cpu_cooler.id}" name="cpuCoolerId">
+      <button>Select</button>
+    </form>
   </li>
 </ul>
 </body>
