--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Products</title>
+    <link rel="stylesheet" th:href="@{/navbar.css}" href="/navbar.css">
+
 </head>
 <body>
+<div th:replace="navbar :: navbar"></div>
+
 <form th:action="@{/products}" method="get">
     <label for="sortBy">Sort By</label>
     <select th:value="${sortBy}" name="sortBy" id="sortBy" size="1">
@@ -36,4 +40,24 @@
     </li>
 </ul>
 </body>
+
+<script>
+
+    document.addEventListener('DOMContentLoaded', () => {
+        const toggleButton = document.querySelector('.dropdown-toggle');
+        const dropdown = document.getElementById('componentsDropdown');
+
+        toggleButton.addEventListener('click', () => {
+            const isVisible = dropdown.style.display === 'block';
+            dropdown.style.display = isVisible ? 'none' : 'block';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (!toggleButton.contains(event.target) && !dropdown.contains(event.target)) {
+                dropdown.style.display = 'none';
+            }
+        });
+    });
+
+</script>
 </html>
