--- a/src/main/resources/templates/customer/dashboard.html
+++ b/src/main/resources/templates/customer/dashboard.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Customer Dashboard</title>
 </head>
 <body>
-<div th:replace="fragments/logout :: logout-button"></div>
+    <h1>Welcome to your Dashboard</h1>
+    <p>Logged in as: <span th:text="${userName}"></span></p>
+    <div th:replace="~{fragments/login-logout :: login-logout}"></div>
 </body>
 </html>
