--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Products</title>
-    <link rel="stylesheet" th:href="@{/navbar.css}" href="/navbar.css">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}" href="/css/navbar.css">
 
 </head>
 <body>
