Finished component filtering

--- a/src/main/resources/templates/components/cpu-coolers.html
+++ b/src/main/resources/templates/components/cpu-coolers.html
@@ -27,7 +27,7 @@
       <option>at least</option>
       <option>at most</option>
     </select>
-    <label id="priceFilterLabel" for="numberFilter">£</label>
+    <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
   </p>
   <p>
