--- a/src/main/resources/templates/components/cases.html
+++ b/src/main/resources/templates/components/cases.html
@@ -29,9 +29,9 @@
       <option>at least</option>
       <option>at most</option>
     </select>
-    <label id="priceFilterLabel" for="numberFilter">£</label>
+    <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
-    <label id="caseSizeFilterLabel" for="numberFilter">L</label>
+    <label id="caseSizeFilterLabel" class="filterLabel" for="numberFilter">L</label>
   </p>
   <p>
     <button type="submit">Go</button>
