--- a/src/main/resources/templates/components/cpus.html
+++ b/src/main/resources/templates/components/cpus.html
@@ -24,14 +24,17 @@
             <option>(No filter)</option>
             <option>Price</option>
             <option value="CPU clock speed">Core clock speed</option>
+            <option value="CPU brand">Brand</option>
         </select>
         <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
-            <option>at least</option>
-            <option>at most</option>
+            <option class="numberFilterOption">at least</option>
+            <option class="numberFilterOption">at most</option>
+            <option class="brandFilterOption">Intel</option>
+            <option class="brandFilterOption">AMD</option>
         </select>
-        <label id="priceFilterLabel" for="numberFilter">£</label>
+        <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
         <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
-        <label id="cpuClockFilterLabel" for="numberFilter">GHz</label>
+        <label id="cpuClockFilterLabel" class="filterLabel" for="numberFilter">GHz</label>
     </p>
     <p>
         <button type="submit">Go</button>
