--- a/src/main/resources/templates/components/power-supplies.html
+++ b/src/main/resources/templates/components/power-supplies.html
@@ -23,13 +23,15 @@
     <select th:value="${filterBy}" name="filterBy" id="filterBy" size="1" onchange="checkFilterBy(this);">
       <option>(No filter)</option>
       <option>Price</option>
+      <option>Wattage</option>
     </select>
     <select th:value="${filterOp}" name="filterOp" id="filterOp" size="1">
       <option>at least</option>
       <option>at most</option>
     </select>
-    <label id="priceFilterLabel" for="numberFilter">£</label>
+    <label id="priceFilterLabel" class="filterLabel" for="numberFilter">£</label>
     <input type="number" th:value="${numberFilter}" name="numberFilter" id="numberFilter" step="any">
+    <label id="psuWattageFilterLabel" class="filterLabel" for="numberFilter">W</label>
   </p>
   <p>
     <button type="submit">Go</button>
