--- a/src/main/resources/templates/custom-pc.html
+++ b/src/main/resources/templates/custom-pc.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom PC</title>
+    <link rel="stylesheet" th:href="@{/css/navbar.css}" href="/navbar.css">
 </head>
 <body>
+
+<div th:replace="~{navbar :: navbar}"></div>
+
     <form th:action="@{/products}" method="post" th:object="${customPc}">
         <p>
             <label for="cpuName">CPU:</label>
@@ -53,4 +57,23 @@
         <p><button type="submit">Submit</button></p>
     </form>
 </body>
+<script>
+
+    document.addEventListener('DOMContentLoaded', () => {
+        const toggleButton = document.querySelector('.dropdown-toggle');
+        const dropdown = document.getElementById('componentsDropdown');
+
+        toggleButton.addEventListener('click', () => {
+            const isVisible = dropdown.style.display === 'block';
+            dropdown.style.display = isVisible ? 'none' : 'block';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (!toggleButton.contains(event.target) && !dropdown.contains(event.target)) {
+                dropdown.style.display = 'none';
+            }
+        });
+    });
+
+</script>
 </html>
