--- a/src/main/resources/templates/manage_order_table.html
+++ b/src/main/resources/templates/manage_order_table.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+
 <div th:replace="navbar :: navbar"></div>
 
 <h1>Orders</h1>
@@ -38,4 +39,23 @@
 </table>
 
 </body>
+<script>
+
+  document.addEventListener('DOMContentLoaded', () => {
+    const toggleButton = document.querySelector('.dropdown-toggle');
+    const dropdown = document.getElementById('componentsDropdown');
+
+    toggleButton.addEventListener('click', () => {
+      const isVisible = dropdown.style.display === 'block';
+      dropdown.style.display = isVisible ? 'none' : 'block';
+    });
+
+    window.addEventListener('click', (event) => {
+      if (!toggleButton.contains(event.target) && !dropdown.contains(event.target)) {
+        dropdown.style.display = 'none';
+      }
+    });
+  });
+
+</script>
 </html>
